--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     </head>
     <body>
         <header class="header">
-            some text gies here
+            <div class="logo-box">
+                <img src="img/ico/tree.png" alt="logo">
+            </div>
+            
         </header>
         
         <script src="" async defer></script>
