--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <body>
         <header class="header">
             <div class="logo-box">
-                <img src="img/ico/tree.png" alt="logo">
+                <img src="img/ico/planet-earth.ico" alt="logo" class="logo">
             </div>
+            <h1 class="heading-primary">
+                <span class="heading-primary-main">Nature Tour</span>
+                <span class="heading-primary-sub">Where magic of nature happen</span>
+            </h1>
             
         </header>
         
