--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             <div class="logo-box">
                 <img src="img/ico/planet-earth.ico" alt="logo" class="logo">
             </div>
-            <h1 class="heading-primary">
-                <span class="heading-primary-main">Nature Tour</span>
-                <span class="heading-primary-sub">Where magic of nature happen</span>
-            </h1>
+            <div class="text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary-main">Nature Tour</span>
+                    <span class="heading-primary-sub">Where magic of nature happen</span>
+                </h1>
+            </div>         
             
         </header>
         
