complex animation button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <span class="heading-primary-main">Nature Tour</span>
                     <span class="heading-primary-sub">Where magic of nature happen</span>
                 </h1>
+                <a href="#" class="btn btn-white">Discover our tour</a>
             </div>         
             
         </header>
