--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" href="img/ico/tree.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="img/ico/planet-earth.ico" type="image/x-icon">
     </head>
     <body>
         <header class="header">
