--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header class="header">
             <div class="logo-box">
-                <img src="img/ico/planet-earth.ico" alt="logo" class="logo">
+                <img src="img/ico/tree.ico" alt="logo" class="logo">
             </div>
             <div class="text-box">
                 <h1 class="heading-primary">
