convert units from px to rem

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </h1>
                 <a href="#" class="btn btn-white">Discover our tour</a>
             </div>         
-            
+            <!--Convertion of px to rem-->
         </header>
         
         <script src="" async defer></script>
