--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     </head>
     <body>
         <header class="header">
-            <div class="logo-box">
-                <img src="img/ico/tree.ico" alt="logo" class="logo">
+            <div class="header__logo-box">
+                <img src="img/ico/tree.ico" alt="logo" class="header__logo">
             </div>
-            <div class="text-box">
+            <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary-main">Nature Tour</span>
-                    <span class="heading-primary-sub">Where magic of nature happen</span>
+                    <span class="heading-primary--main">Nature Tour</span>
+                    <span class="heading-primary--sub">Where magic of nature happen</span>
                 </h1>
-                <a href="#" class="btn btn-white">Discover our tour</a>
+                <a href="#" class="btn btn--white btn--animated">Discover our tour</a>
             </div>         
             <!--Convertion of px to rem-->
         </header>
